Share and scroll fixes (#26)
* Scroll to color picker when scrollbar shows

* share functionality

--- a/src/_includes/css/style.css
+++ b/src/_includes/css/style.css
@@ -24,7 +24,7 @@ html, body {
 	font-weight: 300;
 	line-height: 1.5;
 
-	background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%202%202%22%3E%3Cpath%20d%3D%22M1%202V0h1v1H0v1z%22%20fill-opacity%3D%22.05%22%2F%3E%3C%2Fsvg%3E");
+	background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%202%202%22%3E%3Cpath%20d%3D%22M1%202V0h1v1H0v1z%22%20fill-opacity%3D%22.15%22%2F%3E%3C%2Fsvg%3E");
 	background-size: 1rem;
 	background-color: var(--background-color);
 	color: var(--text-color);
@@ -85,6 +85,9 @@ button {
 button svg {
 	fill: currentColor;
 	width: 1rem;
+}
+
+aside button svg {
 	margin-right: 0.5rem;
 }
 
@@ -260,6 +263,7 @@ aside {
 
 .aside-section + .aside-section {
 	border-top: 1px solid var(--background-color);
+	min-height: 22rem;
 }
 
 .aside-footer {
@@ -285,11 +289,17 @@ aside {
 	}
 }
 
-.app-container svg {
+.app-container > svg {
 	display: none;
+	padding: 1rem;
+	width: 100%;
+	max-height: calc(100vh - 55vh - 6rem - 2rem);
+	object-fit: scale-down;
+	flex: 1;
+	border-radius: 0.25rem;
 }
 
-.js .app-container svg {
+.js .app-container > svg {
 	display: block;
 }
 
@@ -297,27 +307,18 @@ aside {
 	flex: 1;
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
 	align-items: center;
 	margin: 1rem;
 }
 
-.app-container svg {
-	padding: 1rem;
-	width: 100%;
-	max-height: calc(100vh - 55vh - 2.5rem - 2rem);
-	object-fit: scale-down;
-}
-
 @media (min-width: 800px){
 	.app-container {
-		margin: 2.5rem;
+		margin: 1rem 2.5rem;
 	}
 
-	.app-container svg {
+	.app-container > svg {
 		padding: 2.5rem;
-	}
-
-	.app-container svg {
 		max-height: calc(100vh - 5rem);
 	}
 }
@@ -391,6 +392,7 @@ input[type=range]::-webkit-slider-thumb {
 	top: 100%;
 	width: 100%;
 	padding: 0.5rem;
+	margin-bottom: 1rem;
 	border-radius: 0.25rem;
 	background-color: var(--background-color);
 	box-shadow: 0 0 5px 0px var(--frame-background-color);
@@ -398,7 +400,7 @@ input[type=range]::-webkit-slider-thumb {
 
 .color-swatch {
 	width: 100%;
-	height: 150px;
+	height: 6rem;
 	position: relative;
 	cursor: pointer;
 }
@@ -459,7 +461,22 @@ input[type=range].alpha {
 }
 
 .transparent-bg {
-	background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%202%202%22%3E%3Cpath%20d%3D%22M1%202V0h1v1H0v1z%22%20fill-opacity%3D%22.05%22%2F%3E%3C%2Fsvg%3E");
+	background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%202%202%22%3E%3Cpath%20d%3D%22M1%202V0h1v1H0v1z%22%20fill-opacity%3D%22.15%22%2F%3E%3C%2Fsvg%3E");
 	background-color: #fff;
 	background-size: 1rem;
+}
+
+.progress-bar {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	background-color: var(--frame-background-color);
+	padding: 0.25rem 0.5rem;
+	margin-top: 0.5rem;
+	border-radius: 0.25rem;
+}
+
+.progress-bar button {
+	margin-right: 1rem;
+	padding: 0.5rem;
 }
